# plug-blockchain

./: CHANGELOG.md  Cargo.toml  README.adoc  README.md
.circleci/: config.yml
core/cli/src/: lib.rs  params.rs
core/client/: Cargo.toml
core/consensus/aura/: Cargo.toml
core/executor/runtime-test/: Cargo.toml
core/finality-grandpa/src/: import.rs  service_integration.rs  tests.rs
core/peerset/src/: lib.rs
core/primitives/: Cargo.toml
core/primitives/src/: storage.rs
core/sr-api-macros/: Cargo.toml
core/sr-primitives/: Cargo.toml
core/sr-primitives/src/: lib.rs  testing.rs  traits.rs
core/test-runtime/src/: lib.rs
node-template/runtime/: Cargo.toml
node-template/runtime/src/: lib.rs  template.rs
node/cli/src/: chain_spec.rs  factory_impl.rs  service.rs
node/executor/src/: lib.rs
node/primitives/: Cargo.toml
node/primitives/src/: doughnut.rs  lib.rs  plug_extrinsic.rs  types.rs  util.rs
node/runtime/: Cargo.toml
node/runtime/src/: doughnut.rs  fee.rs  lib.rs
node/runtime/tests/: fee.rs
node/runtime/wasm/: build.sh
node/testing/src/: keyring.rs
prml/attestation/: Cargo.toml
prml/attestation/src/: lib.rs
prml/doughnut/: Cargo.toml
prml/doughnut/src/: impls.rs  lib.rs
prml/fees/: Cargo.toml
scripts/: init.sh
srml/assets/src/: lib.rs
srml/aura/src/: mock.rs
srml/authority-discovery/: Cargo.toml
srml/authority-discovery/src/: lib.rs
srml/authorship/src/: lib.rs
srml/babe/src/: mock.rs
srml/balances/src/: lib.rs  mock.rs  tests.rs
srml/collective/src/: lib.rs
srml/consensus/src/: mock.rs
srml/contract/src/: gas.rs  tests.rs
srml/contracts/src/: exec.rs  tests.rs
srml/council/src/: lib.rs  motions.rs
srml/democracy/src/: lib.rs
srml/elections-phragmen/src/: lib.rs
srml/elections/src/: lib.rs  mock.rs
srml/example/src/: lib.rs
srml/executive/: Cargo.toml
srml/executive/src/: lib.rs
srml/executive/src/doughnut/: mod.rs
srml/finality-tracker/src/: lib.rs
srml/generic-asset/src/: lib.rs
srml/grandpa/src/: mock.rs
srml/im-online/: Cargo.toml
srml/im-online/src/: mock.rs
srml/indices/src/: lib.rs  (+1 more)
subkey/: Cargo.toml
subkey/src/: main.rs
(+36 files in other folders)
