[package]
name = "prml-attestation"
version = "0.1.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
primitives = { package = "substrate-primitives", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
support = { package = "srml-support", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
system = { package = "srml-system", git = "https://github.com/cennznet/plug-blockchain", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"primitives/std",
	"support/std",
	"system/std",
]
