[package]
name = "srml-executive"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", path = "../../core/sr-std", default-features = false }
runtime_io = { package = "sr-io", path = "../../core/sr-io", default-features = false }
sr-primitives = { path = "../../core/sr-primitives", default-features = false }
srml-support = { path = "../support", default-features = false }
system = { package = "srml-system", path = "../system", default-features = false }
primitives = { package = "substrate-primitives", path = "../../core/primitives", default-features = false }

[dev-dependencies]
balances = { package = "srml-balances", path = "../balances" }
hex-literal = "0.2.0"
prml-doughnut = { path = "../../prml/doughnut", features = ["mock"] }
timestamp = { package = "srml-timestamp", path = "../timestamp", default-features = false }
srml-indices = { path = "../indices" }

[features]
default = ["std"]
std = [
	"rstd/std",
	"srml-support/std",
	"serde",
	"codec/std",
	"primitives/std",
	"sr-primitives/std",
	"runtime_io/std",
	"system/std",
]
